--- a/style.css
+++ b/style.css
@@ -1,18 +1,48 @@
-*{
-    margin: 0;
+@keyframes Imgsizing {
+    0%{height: 200px;}
+    25%{height: 225px;}
+    50%{height: 250px;}
+    75%{height: 275px;}
+    100%{height: 300px;}
+}
+
+*{  margin: 0;
     padding: 0;
 }
 
 h1{
     margin: 40px;
+    transition-property: color font-style text-decoration;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+    }
+
+    h1:hover{
+        color: hotpink;
+        font-style: italic;
+        text-decoration: underline;
     }
 
 img{
     margin: 40px;
     height: 200px;
 }
+img:hover{
+    animation-name: Imgsizing;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 3;
+}
 
 footer{
     margin: 40px;
     font-size: 12pt;
+    transition-property: font-family;
+    transition-property: color;
+    transition-duration: 2s;
+    transition-timing-function: ease-in;
+}
+footer:hover{
+    font-family: cursive;
+    color: orange;
 }
