--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @keyframes Imgsizing {
     0%{height: 200px;}
-    25%{height: 225px;}
+    25%{height: 215px;}
     50%{height: 250px;}
-    75%{height: 275px;}
-    100%{height: 300px;}
+    75%{height: 215px;}
+    100%{height: 200px;}
 }
 
 *{  margin: 0;
@@ -30,7 +30,7 @@ img{
 img:hover{
     animation-name: Imgsizing;
     animation-duration: 0.5s;
-    animation-timing-function: ease-in-out;
+    animation-timing-function: ease-out;
     animation-iteration-count: 3;
 }
 
@@ -39,7 +39,7 @@ footer{
     font-size: 12pt;
     transition-property: font-family;
     transition-property: color;
-    transition-duration: 2s;
+    transition-duration: 0.5s;
     transition-timing-function: ease-in;
 }
 footer:hover{
